Integration FULL 1.0